--- a/about/index.html
+++ b/about/index.html
@@ -218,7 +218,8 @@
                 <ul>
 <li>GitHub：<a href="https://github.com/MoonSoilWJ" target="_blank" rel="noopener">MoonSoilWJ</a> </li>
 <li>微博：<a href="http://weibo.com/3962951205/profile?topnav=1&wvr=6&is_all=1" target="_blank" rel="noopener">肚子吃撑的杜</a></li>
-<li>E-mail：<a href="mailto:&#119;&#106;&#x2e;&#100;&#x75;&#64;&#105;&#x63;&#x6c;&#111;&#x75;&#x64;&#x2e;&#x63;&#x6f;&#x6d;">&#119;&#106;&#x2e;&#100;&#x75;&#64;&#105;&#x63;&#x6c;&#111;&#x75;&#x64;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
+<li>E-mail：<a href="mailto:&#x77;&#106;&#46;&#100;&#x75;&#64;&#105;&#99;&#108;&#x6f;&#x75;&#x64;&#46;&#x63;&#x6f;&#x6d;">&#x77;&#106;&#46;&#100;&#x75;&#64;&#105;&#99;&#108;&#x6f;&#x75;&#x64;&#46;&#x63;&#x6f;&#x6d;</a></li>
+<li>resume: <a href="https://du-wenjie.com/resume/">https://du-wenjie.com/resume/</a></li>
 </ul>
 
 
