--- a/resume/index.html
+++ b/resume/index.html
@@ -190,7 +190,7 @@
                     <br>
                     <br>
                     <li>
-                        <h3 contenteditable="true">KK体育</h3>
+                        <h3 contenteditable="true">KK体育（竞彩之家）</h3>
                         <p contenteditable="true"> 
                             <h4>主要职责：</h4>
                             <br>1，框架搭建及后续版本维护。
