--- a/resume/index.html
+++ b/resume/index.html
@@ -115,7 +115,7 @@
                         <p contenteditable="true">
                         	1，CET-6，较好的英文文档阅读能力
                             <br/>2，单片机三级证书、嵌入式三级证书。
-                            <br/>3，大学期间尝试在半个月时间内自学Android完成毕业设计。
+                            <br/>3，半个月时间自学Android完成毕业设计。
                         </p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
@@ -128,7 +128,7 @@
                       <h3 contenteditable="true">杭州明霖信息技术有限公司 </h3>
                       <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <!-- <li> -->
-                        <h4 contenteditable="true">2019.03 - 至今&emsp;&emsp;&emsp;&emsp;iOS开发主管</h4>
+                        <h4 contenteditable="true">2019.03 - 2020.09&emsp;&emsp;&emsp;&emsp;iOS开发主管</h4>
                         <p contenteditable="true">
                             1，熟悉苹果app签名机制，使用开源项目fastlane根据个性化分包需求用ruby实现了app的超级签名，解决游戏分包签名的问题。
                             <br/>2，解决团队痛点，如编写shell脚本自动化打包和CI的部署等。
@@ -196,7 +196,7 @@
                             <br>1，框架搭建及后续版本维护。
                             <br>2，红包模块的开发、使用svg动画。
                             <br>3，采用无痕埋点和代码埋点结合，优化之前的埋点解决方案。
-                            <br>4，赛事详情采用webview和原生结合的开发模式，熟悉js与OC交互，解决oc和h5同步传递数据的问题。
+                            <br>4，赛事详情采用webview和原生结合的开发模式，熟悉js与OC交互，解决oc和h5同步传递数据的问题，cookie保存注入。
                             <br>5，接入bugly，并在迭代版本中不断降低崩溃率。
                             <br>6，使用JSPatch作为热更新解决方案，指导小伙伴使用和编写js代码，通过下发js代码做到动态修改bug。
                             <br>7，使用Apple Configurator2生成描述文件，作为用户找回app下载地址的方式，防止用户流失。
@@ -204,7 +204,7 @@
                     <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">KK电竞</h3>
-                        <p contenteditable="true">电竞是一个供玩家一起游戏一起开黑的平台，可以在聊天室实时音频交流。
+                        <p contenteditable="true">电竞是一个供玩家一起游戏一起开黑的平台，可以在语音房实时音频交流。
                         <h4>主要职责：</h4>
                         <br>1，负责聊天室群消息的展示，集成融云实时音视频SDK ,对聊天室群消息封装，通过delegate将消息转发到其他类。
                         </p>
