--- a/resume/index.html
+++ b/resume/index.html
@@ -165,15 +165,41 @@
                     <hr>
                     <ul class="experience-list">
                         <li>
-                            <h3 contenteditable="true">鲁班SDK </h3>
+                            <h3 contenteditable="true">鲁班全埋点SDK </h3>
                             <p contenteditable="true">鲁班SDK旨在提供方便快捷的数据采集方案，通过“无埋点SDK”无需开发接入即可获取行为数据，通过“可视化圈选”打通行为与业务数据，提供更加丰富的分析场景。
                             <h4>主要职责：</h4>
-                            <br>1，原生无埋点：使用runtime交换UIcontrol、UITableView、UIGestureRecognizer等类的原生方法实现全埋点采集；使用插件化设计思想供业务方选择采集事件类型；实现集团二方库SCCModule的协议达到可模块化调用；使用FMDB存储采集数据；
-                            <br>2，SDK支持RN：实现RCTBridgeModdule协议，导出采集方法给rn调用。采集方法里面使用原生无埋点SDK进行数据同步。
+                            <br>1，原生全埋点：使用runtime交换UIcontrol、UITableView、UIGestureRecognizer等类的原生方法实现全埋点采集；使用插件化设计思想供业务方选择采集事件类型；实现集团二方库SCCModule的协议达到可模块化调用；使用FMDB存储采集数据；
+                            <br>2，SDK支持RN：实现RCTBridgeModdule协议，导出采集方法给rn调用。采集方法里面使用原生全埋点SDK进行数据同步。
                             <br>3，可视化圈选：原生圈选时，通过用户点击时拿到点击的point，再通过keywindow的hitTest:withEvent:方法可以获取到响应的view，从而获取到view的相关属性；h5圈选时通过KVO监听webview的URL发生改变，再同步到前端。
                             <br>4，生成framwork,发布podspec到企业repo并输出接入文档，与客户联调问题。
                             </p>
                             <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                        </li>
+                                                <li>
+                            <h3 contenteditable="true">超级签名</h3>
+                            <p contenteditable="true">超级签名是基于苹果个人开发者账号提供的签名服务，用户通过Itms-service的方式就可以安装ipa。由于公司的游戏包有分包的需求，市面的上的超级签无法满足我们的需求，于是研究相关资料自己实现了一套,全部代码使用ruby语言编写。
+                            <h4>主要职责：</h4>
+                            <br>1，编写配置文件.mobileconfig用来获取用户设备的UDID。
+                            <br>2，熟悉spaceship封装的AppStore Connect API和Developer Portal API，生成描述文件，注册UDID等。
+                            <br>3，使用fastlane工具中的cert类，创建私钥并生成证书。
+                            <br>4，使用sign类对ipa进行签名。
+                            <br>5，使用rubyzip进行分包，并上传ipa到阿里云oss，供用户下载。
+                            </p>
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span>
+                        </li>
+                        <li>
+                            <h3 contenteditable="true">KK体育（竞彩之家）</h3>
+                            <p contenteditable="true">
+                            <h4>主要职责：</h4>
+                            <br>1，框架搭建及后续版本维护。
+                            <br>2，红包模块的开发、使用svg动画。
+                            <br>3，采用无痕埋点和代码埋点结合，优化之前的埋点解决方案。
+                            <br>4，赛事详情采用webview和原生结合的开发模式，熟悉js与OC交互，解决oc和h5同步传递数据的问题，cookie保存注入。
+                            <br>5，接入bugly，并在迭代版本中不断降低崩溃率。
+                            <br>6，使用JSPatch作为热更新解决方案，指导小伙伴使用和编写js代码，通过下发js代码做到动态修改bug。
+                            <br>7，使用Apple Configurator2生成描述文件，作为用户找回app下载地址的方式，防止用户流失。
+                            </p>
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span>
                         </li>
                         <li>
                             <h3 contenteditable="true">嗨吃宝宝 </h3>
@@ -191,45 +217,20 @@
                             <h4>主要职责：</h4>
                             1，对视频播放、音视频采集、美颜特效等所使用的SDK进行选型，对比市面上的短视频SDK厂商，七牛云、阿里云、腾讯云、相芯科技等，通过查看接口文档、demo做出解决方案。
                             </p>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
-                        <li>
-                            <h3 contenteditable="true">超级签名</h3>
-                            <p contenteditable="true">超级签名是基于苹果个人开发者账号提供的签名服务，用户通过Itms-service的方式就可以安装ipa。由于公司的游戏包有分包的需求，市面的上的超级签无法满足我们的需求，于是研究相关资料自己实现了一套,全部代码使用ruby语言编写。
-                            <h4>主要职责：</h4>
-                            <br>2，编写配置文件.mobileconfig用来获取用户设备的UDID。
-                            <br>3，熟悉spaceship封装的AppStore Connect API和Developer Portal API，生成描述文件，注册UDID等。
-                            <br>4，使用fastlane工具中的cert类，创建私钥并生成证书。
-                            <br>5，使用sign类对ipa进行签名。
-                            <br>6，使用rubyzip进行分包，并上传ipa到阿里云oss，供用户下载。
-                            </p>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
-                        <br>
-                        <br>
-                        <li>
-                            <h3 contenteditable="true">KK体育（竞彩之家）</h3>
-                            <p contenteditable="true">
-                            <h4>主要职责：</h4>
-                            <br>1，框架搭建及后续版本维护。
-                            <br>2，红包模块的开发、使用svg动画。
-                            <br>3，采用无痕埋点和代码埋点结合，优化之前的埋点解决方案。
-                            <br>4，赛事详情采用webview和原生结合的开发模式，熟悉js与OC交互，解决oc和h5同步传递数据的问题，cookie保存注入。
-                            <br>5，接入bugly，并在迭代版本中不断降低崩溃率。
-                            <br>6，使用JSPatch作为热更新解决方案，指导小伙伴使用和编写js代码，通过下发js代码做到动态修改bug。
-                            <br>7，使用Apple Configurator2生成描述文件，作为用户找回app下载地址的方式，防止用户流失。
-                            </p>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span>
+                        </li>
                         <li>
                             <h3 contenteditable="true">KK电竞</h3>
                             <p contenteditable="true">电竞是一个供玩家一起游戏一起开黑的平台，可以在语音房实时音频交流。
                             <h4>主要职责：</h4>
-                            <br>1，负责聊天室群消息的展示，集成融云实时音视频SDK ,对聊天室群消息封装，通过delegate将消息转发到其他类。
+                            1，负责聊天室群消息的展示，集成融云实时音视频SDK ,对聊天室群消息封装，通过delegate将消息转发到其他类。
                             </p>
                             <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                         <li>
                             <h3 contenteditable="true">火红社</h3>
                             <p contenteditable="true">火红社是一款赛事解说视频直播app。
                             <h4>主要职责：</h4>
-                            <br>1，负责礼物模块的开发，礼物动效的呈现。
+                            1，负责礼物模块的开发，礼物动效的呈现。
                             <br>2，负责直播间玩法的开发，如大转盘，拼手速等。
                             <br>3，内购的开发。
                             <br>4，独立对app的所有模块进行维护，线上问题的处理，腾讯云的客服对接等
