--- a/resume/index.html
+++ b/resume/index.html
@@ -13,7 +13,7 @@
         <div class="container" id="cv">
             <div class="side">
                 <div class="me">
-                    <!-- <div class="portrait" style="background-image: url(&quot;https://du-wenjie.com/img/avatar.png&quot;);"></div> -->
+                    <!-- <div class="portrait" style="background-image: url(&quot;https://duwenjie.site/img/avatar.png&quot;);"></div> -->
                     
                     <!-- <div class="portrait" style="background-image: url(static/image/userLogo.JPG);"></div> -->
                     <br>
@@ -30,7 +30,7 @@
                         <li>
                             <label class="left-label" contenteditable="true">性别</label><span class="label-value" contenteditable="true">男</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
-                            <label class="left-label" contenteditable="true">年龄</label><span class="label-value" contenteditable="true">29</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                            <label class="left-label" contenteditable="true">年龄</label><span class="label-value" contenteditable="true">30</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
                             <label class="left-label" contenteditable="true">工作地点</label><span class="label-value" contenteditable="true">浙江杭州</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
@@ -48,7 +48,7 @@
                         <li>
                             <label class="left-label" contenteditable="true">邮箱</label><span class="label-value" contenteditable="true">duwj@foxmail.com</span><span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                         <li>
-                            <label class="left-label" contenteditable="true">个人主页</label><span class="label-value" contenteditable="true">du-wenjie.com</span><span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                            <label class="left-label" contenteditable="true">个人主页</label><span class="label-value" contenteditable="true">duwenjie.site</span><span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                         <li>
                             <label class="left-label" contenteditable="true">Github</label><span class="label-value" contenteditable="true">https://github.com/MoonSoilWJ</span><span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                     </ul>
@@ -62,21 +62,34 @@
                             <progress value="90" max="100"></progress>
                             <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                         <li>
+                            <label class="left-label" contenteditable="true">swift</label>
+                            <progress value="70" max="100"></progress>
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                        <li>
+                            <label class="left-label" contenteditable="true">React</label>
+                            <progress value="60" max="100"></progress>
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                        <li>
+                            <label class="left-label" contenteditable="true">js</label>
+                            <progress value="60" max="100"></progress>
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                        <li>
+                            <label class="left-label" contenteditable="true">css</label>
+                            <progress value="50" max="100"></progress>
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                        <li>
+                            <label class="left-label" contenteditable="true">python</label>
+                            <progress value="50" max="100"></progress>
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                        <li>
                             <label class="left-label" contenteditable="true">ruby</label>
-                            <progress value="80" max="100"></progress>
+                            <progress value="50" max="100"></progress>
                             <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                         <li>
                             <label class="left-label" contenteditable="true">shell</label>
-                            <progress value="60" max="100"></progress>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
-                        <li>
-                            <label class="left-label" contenteditable="true">swift</label>
-                            <progress value="60" max="100"></progress>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
-                        <li>
-                            <label class="left-label" contenteditable="true">h5</label>
                             <progress value="50" max="100"></progress>
                             <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                        
                     </ul>
                 </div>
                 <div class="stack info-unit">
