--- a/resume/index.html
+++ b/resume/index.html
@@ -60,41 +60,51 @@
                         <li>
                             <!-- <label class="left-label" contenteditable="true">objective-C</label>
                             <progress value="90" max="100"></progress>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li> -->
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span> -->
                             • 精通objective-c，熟悉swift、js、css、<br>&emsp; python、ruby、shell等。
+                        </li>
                         <li>
                             <!-- <label class="left-label" contenteditable="true">swift</label>
                             <progress value="70" max="100"></progress>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li> -->
-                            • 熟悉runtime、runloop原理，多线程操作、内存管理。
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span> -->
+                            • 熟悉runtime、runloop原理，多线程操作、<br>&emsp; 内存管理。
+                        </li>
                         <li>
                             <!-- <label class="left-label" contenteditable="true">React</label>
                             <progress value="60" max="100"></progress>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li> -->
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span> -->
                             • 熟悉常用算法和数据结构。
+                        </li>
                         <li>
                             <!-- <label class="left-label" contenteditable="true">js</label>
                             <progress value="60" max="100"></progress>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li> -->
-                            • 熟悉网络编程HTTP/TCP/UDP通信协议
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span> -->
+                            • 熟悉网络编程HTTPS/TCP/UDP通信协议
+                        </li>
                         <li>
                             <!-- <label class="left-label" contenteditable="true">css</label>
                             <progress value="50" max="100"></progress>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li> -->
-                            • 熟悉常见混合开发模式web、RN。
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span> -->
+                            • 熟悉常见混合开发模式web（ReactJS）、<br>&emsp; RN。
+                        </li>
                         <li>
                             <!-- <label class="left-label" contenteditable="true">python</label>
                             <progress value="50" max="100"></progress>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li> -->
-                            • 熟悉Objective-C面向对象设计方法和常用设计模式。
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span> -->
+                            • 熟悉Objective-C面向对象设计方法和常用设<br>&emsp; 计模式。
+                        </li>
                         <li>
                             <!-- <label class="left-label" contenteditable="true">ruby</label>
                             <progress value="50" max="100"></progress>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li> -->
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span> -->
+                            • 熟悉项目性能优化（内存、界面、启动、网<br>&emsp; 络）、crash防护。
+                        </li>
                         <li>
                             <!-- <label class="left-label" contenteditable="true">shell</label>
                             <progress value="50" max="100"></progress>
-                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li> -->
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span> -->
+                            • 熟悉持续集成、自动打包、代码混淆。
+                        </li>
                         
                     </ul>
                 </div>
