--- a/resume/index.html
+++ b/resume/index.html
@@ -32,7 +32,7 @@
                         <li>
                             <label class="left-label" contenteditable="true">年龄</label><span class="label-value" contenteditable="true">30</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
-                            <label class="left-label" contenteditable="true">工作地点</label><span class="label-value" contenteditable="true">浙江杭州</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                            <label class="left-label" contenteditable="true">工作地点</label><span class="label-value" contenteditable="true">上海</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
                             <label class="left-label" contenteditable="true">毕业院校</label><span class="label-value" contenteditable="true">杭州电子科技大学</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
