--- a/resume/index.html
+++ b/resume/index.html
@@ -154,10 +154,18 @@
                     <hr>
                     <ul class="experience-list">
                         <li>
+                            <h3 contenteditable="true">上海趣抓网络科技有限公司&emsp;&emsp;-&emsp;&emsp;软件中心 </h3>
+                            <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span>
+                            
+                            <h4 contenteditable="true">2023.5 - 至今&emsp;&emsp;&emsp;&emsp;iOS开发工程师</h4>
+                            <p contcontenteditable="true">
+                            1，负责录音转换大师app的开发。涉及音频的录制、播放、编辑，录音转文字、文字转录音等功能。
+                        </li>
+                        <li>
                             <h3 contenteditable="true">微盟集团&emsp;&emsp;-&emsp;&emsp;销氪研发中心 </h3>
                             <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span>
                             
-                            <h4 contenteditable="true">2021.10 - 至今&emsp;&emsp;&emsp;&emsp;资深软件开发工程师</h4>
+                            <h4 contenteditable="true">2021.10 - 2022.10&emsp;&emsp;&emsp;&emsp;资深软件开发工程师</h4>
                             <p contcontenteditable="true">
                             1，负责销氪APP中的客资模块的开发迭代。
                             <br/>2，负责基建项目日志回捞，使定位线上随机问题的难度大大降低，让随机问题变得有迹可循寻
