--- a/resume/index.html
+++ b/resume/index.html
@@ -154,12 +154,14 @@
                     <hr>
                     <ul class="experience-list">
                         <li>
-                            <h3 contenteditable="true">上海趣抓网络科技有限公司&emsp;&emsp;-&emsp;&emsp;软件中心 </h3>
+                            <h3 contenteditable="true">上海乐蜀网络科技有限公司&emsp;&emsp;-&emsp;&emsp;软件中心 </h3>
                             <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span>
                             
                             <h4 contenteditable="true">2023.5 - 至今&emsp;&emsp;&emsp;&emsp;iOS开发工程师</h4>
                             <p contcontenteditable="true">
-                            1，负责录音转换大师app的开发。涉及音频的录制、播放、编辑，录音转文字、文字转录音等功能。
+                            1，独立负责《录音转换大师》、《加密电话》两款APP的开发迭代上架工作，涉及音频的录制、播放、编辑，录音转文字、文字转录音、音频格式转换、数据持久化、内购、埋点等功能。
+                            <br/>2，项目的基建搭建：CI/CD的实现，代码push的时候上传ipa到testflight，并发送钉钉通知。
+                            <br/>3，负责新项目立项的调研工作，分析市场现有app，以及技术方案及成本的调研，输出文档。
                         </li>
                         <li>
                             <h3 contenteditable="true">微盟集团&emsp;&emsp;-&emsp;&emsp;销氪研发中心 </h3>
@@ -168,7 +170,7 @@
                             <h4 contenteditable="true">2021.10 - 2022.10&emsp;&emsp;&emsp;&emsp;资深软件开发工程师</h4>
                             <p contcontenteditable="true">
                             1，负责销氪APP中的客资模块的开发迭代。
-                            <br/>2，负责基建项目日志回捞，使定位线上随机问题的难度大大降低，让随机问题变得有迹可循寻
+                            <br/>2，负责基建项目日志回捞，使定位线上随机问题的难度大大降低，让随机问题变得有迹可循。
                             <br/>3，负责基建项目防崩溃SDK，通过拦截整体降低了APP的崩溃率。
                             <br/>4，团队内、外部的有效协调沟通，深度参与产品需求讨论，功能定义，优化产品体验。
                         </li>
@@ -203,6 +205,14 @@
                     <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title" contenteditable="true">项目经验</span><span class="item-add"><i class="iconfont icon-playlistadd"></i></span><span class="unit-remove"><i class="iconfont icon-delete"></i></span></h2>
                     <hr>
                     <ul class="experience-list">
+                        <li>
+                            <h3 contenteditable="true">录音转换大师App </h3>
+                            <h4>主要职责：</h4>
+                            1，负责iOS端APP从0开发到上架的工作。
+                            <br>2，配合投放部门集成ads相关库，上报设备信息、广告组关键词等。
+                            </p>3，埋点库的开发。
+                            <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                        </li>
                         <li>
                             <h3 contenteditable="true">销氪App </h3>
                             <p contenteditable="true">销氪app是专为销售人员打造的手机CRM服务软件,通过大数据去获取客户,让企业可以获得最精准的客户,还可以对客户信息进行管理,提高企业工作效率。
