--- a/real-time/index.html
+++ b/real-time/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>游戏模式</title>
+    <title>实时翻译</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/jquery.fullPage.css">
     <style>
@@ -76,10 +76,10 @@
             <div class="serve-translate serve-flash section page1">
                 <div class="flash w flex">
                     <div class="text">
-                        <h2>游戏模式</h2>
+                        <h2>实时翻译</h2>
                         <!-- <li>MY</li>
                         <span>DIARY</span> -->
-                        <p style="margin-top: 39px;">专业游戏游玩状态的App</p>
+                        <p style="margin-top: 39px;">专业语音实时翻译App</p>
                         <div class="bgc-url"></div>
                     </div>
                     <img src="img/1.png" alt="">
