--- a/lingo/index.html
+++ b/lingo/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>实时翻译</title>
+    <title>Lingo实时翻译</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/jquery.fullPage.css">
     <style>
