--- a/lingo/index.html
+++ b/lingo/index.html
@@ -47,7 +47,7 @@
             border-radius: 50%;
             border: 1px solid #000;
         }
-        .logoImg{display: block;width:147px;margin:0;}
+        .logoImg{display: block;width:50px;margin:0;}
         #jpdown-page .product-content img{width:300px;top:150px}
         .text{margin:100px 0 0 0 ;}
     </style>
@@ -57,12 +57,12 @@
     <!-- 头部 -->
     <header>
         <nav class="flex w">
-            <img class="logoImg" src="img/logo@2x.png" alt="">
+            <img class="logoImg" src="img/icon.png" alt="">
             <ul class="title flex">
                 <li><a href="../index.html">首页</a></li>
-                <li><a href="../productList.html">产品中心</a></li>
-                <li><a href="../join.html">人才招聘</a></li>
-                <li><a href="../about.html">关于我们</a></li>
+<!--                <li><a href="../productList.html">产品中心</a></li>-->
+<!--                <li><a href="../join.html">人才招聘</a></li>-->
+<!--                <li><a href="../about.html">关于我们</a></li>-->
                 
             </ul>
         </nav>
@@ -98,32 +98,32 @@
                 </div>
             </div>
             <!-- 高级滤镜 -->
-            <div class="serve-translate serve-flash section page3">
-                <div class="flash w flex white">
-                    <div>
-                        <h2>会员中心</h2>
-                        <div class="bgc-icon"></div>
-                        <p>
-                            尊贵会员<br>
-                            立享体验
-                        </p>
-                        <img src="img/3.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <!-- 在线美颜 -->
-            <div class="serve-translate serve-voice section page4">
-                <div class="voice w white">
-                    <h2>关于我们</h2>
-                    <div class="bgc-icon"></div>
-                    <p>
-                        用户协议<br/>
-                        隐私政策
-
-                    </p>
-                    <img src="img/4.png" alt="">
-                </div>
-            </div>
+<!--            <div class="serve-translate serve-flash section page3">-->
+<!--                <div class="flash w flex white">-->
+<!--                    <div>-->
+<!--                        <h2>会员中心</h2>-->
+<!--                        <div class="bgc-icon"></div>-->
+<!--                        <p>-->
+<!--                            尊贵会员<br>-->
+<!--                            立享体验-->
+<!--                        </p>-->
+<!--                        <img src="img/3.png" alt="">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <!-- 在线美颜 -->-->
+<!--            <div class="serve-translate serve-voice section page4">-->
+<!--                <div class="voice w white">-->
+<!--                    <h2>关于我们</h2>-->
+<!--                    <div class="bgc-icon"></div>-->
+<!--                    <p>-->
+<!--                        用户协议<br/>-->
+<!--                        隐私政策-->
+<!---->
+<!--                    </p>-->
+<!--                    <img src="img/4.png" alt="">-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </section>
 </body>
