--- a/lingo/index.html
+++ b/lingo/index.html
@@ -59,10 +59,10 @@
         <nav class="flex w">
             <img class="logoImg" src="img/icon.png" alt="">
             <ul class="title flex">
-                <li><a href="../index.html">首页</a></li>
-<!--                <li><a href="../productList.html">产品中心</a></li>-->
-<!--                <li><a href="../join.html">人才招聘</a></li>-->
-<!--                <li><a href="../about.html">关于我们</a></li>-->
+                <li><a href="../index.html"></a></li>
+                <li><a href="./app-release.apk">下载</a></li>
+                <li><a href="../join.html"></a></li>
+                <li><a href="../about.html"></a></li>
                 
             </ul>
         </nav>
