--- a/lingo/index.html
+++ b/lingo/index.html
@@ -13,6 +13,7 @@
             z-index: 999;
             top: 0;
             left: 360px;
+            width:300px
         }
 
         a {
@@ -56,13 +57,13 @@
 <body>
     <!-- 头部 -->
     <header>
-        <nav class="flex w">
+        <nav class="flex">
             <img class="logoImg" src="img/icon.png" alt="">
-            <ul class="title flex">
-                <li><a href="../index.html"></a></li>
+            <ul class="title">
                 <li><a href="./app-release.apk">下载</a></li>
-                <li><a href="../join.html"></a></li>
-                <li><a href="../about.html"></a></li>
+<!--                <li><a href="../index.html">下载</a></li>-->
+<!--                <li><a href="../join.html">下载</a></li>-->
+<!--                <li><a href="../about.html">下载</a></li>-->
                 
             </ul>
         </nav>
