--- a/lingo/index_private.html
+++ b/lingo/index_private.html
@@ -88,10 +88,7 @@
                         （1）您使用录音功能或上传音/视频服务时，我们会请求您授权麦克风、设备储存读写和访问、相册敏感权限。您如果拒绝授权提供，将无法使用此功能，但不影响您正常使用“Lingo实时翻译”的其他功能。
                     </p>
                     <p>
-                        （2）您使用录音转文字、音频裁剪、音频转文字、语音翻译、录机音、提取音频、导入音频服务时，我们会请求您授权设备储存读写和访问、麦克风、相册、SD卡数据敏感权限。您如果拒绝授权提供，将无法使用此功能，但不影响您正常使用“Lingo实时翻译”的其他功能。
-                    </p>
-                    <p>
-                        （3）您保存音频、文档、图片、视频时，需要您提供设备储存读写和访问权限，您如果拒绝授权提供，将无法使用此功能，但不影响您正常使用“Lingo实时翻译”的其他功能。请注意，您上传、保存的信息中可能包含您的个人信息或敏感个人信息，请您在操作前慎重考虑。如您上传、保存的信息涉及到他人的个人信息的，您应当在发布前征得他人同意。
+                        （2）您保存音频、文档、图片、视频时，需要您提供设备储存读写和访问权限，您如果拒绝授权提供，将无法使用此功能，但不影响您正常使用“Lingo实时翻译”的其他功能。请注意，您上传、保存的信息中可能包含您的个人信息或敏感个人信息，请您在操作前慎重考虑。如您上传、保存的信息涉及到他人的个人信息的，您应当在发布前征得他人同意。
                     </p>
                     <p>
 
@@ -638,13 +635,10 @@
                     我们支持您随时注销此前注册的账户，您可以通过以下方式进行：
                 </p>
                 <p>
-                    (1)通过点击点击【我的】-【设置】-【注销账户】申请注销；
+                    (1)通过发送电子邮件至 duwj@foxmail.com 申请注销；
                 </p>
                 <p>
-                    (2)通过发送电子邮件至 duwj@foxmail.com申请注销；
-                </p>
-                <p>
-                    (3)通过客服联系我们的个人信息保护专员申请注销。
+                    (2)通过客服联系我们的个人信息保护专员申请注销。
                 </p>
                 <p>
                     如果您按发送电子邮件或客服方式申请注销账户的，我们核查后为您注销账号。在您的帐号注销之后，我们将停止为您提供全部或部分“Lingo实时翻译”的服务，并依据您的要求，删除您的个人信息或做匿名化处理，但法律法规另有规定的除外。
@@ -662,7 +656,7 @@
                     （四）投诉和举报
                 </h4>
                 <p>
-                    您可以邮件至wangjt@leshu.com 或点击【我的】-【客服】联系我们的客服进行投诉或举报。我们收到您的问题、意见或建议，并验证您的用户身份后尽快予以处理。
+                    您可以邮件至duwj@foxmail.com 或点击【我的】-【客服】联系我们的客服进行投诉或举报。我们收到您的问题、意见或建议，并验证您的用户身份后尽快予以处理。
                 </p>
                 <h4>
                     （五）响应您的上述请求
