--- a/lingo/index_private.html
+++ b/lingo/index_private.html
@@ -168,7 +168,7 @@
                 <p>
                     3.读取手机状态和身份（电话权限、设备权限）android.permission.READ_PHONE_STATE
                     权限功能说明：提供读取手机设备标识等信息，请你放心该权限无法监听、获取您的任何通话内容与信息
-                    使用场景与目的：读取设备通话状态和识别码，ANDROID-ID、识别设备ID，IMEI、IMSI、设备 MAC 地址，用于完成账号登录、安全保障等主要功能
+                    使用场景与目的：读取设备通话状态和识别码，获取设备序列号、ANDROID-ID、识别设备ID，IMEI、IMSI、设备 MAC 地址，用于完成账号登录、安全保障等主要功能
 
                 </p>
                 <p>
@@ -206,7 +206,7 @@
                     1.友盟+ SDK(com.uc.crashsdk、com.efs、com.umeng)
                 </p>
                 <p>
-                    涉及个人信息：设备标识符（Android如IMEI、Android ID、Serial、IMSI、OPENUDID、ICCID、OAID）、MAC地址、WLAN接入点（如SSID、BSSID）、软件列表、设备传感器、地理位置信息
+                    涉及个人信息：设备标识符（Android如获取设备序列号、IMEI、Android ID、Serial、IMSI、OPENUDID、ICCID、OAID）、MAC地址、WLAN接入点（如SSID、BSSID）、软件列表、设备传感器、地理位置信息
                 </p>
                 <p>
                     使用目的：统计分析服务、设备推送消息服务、设备应用性能监控服务、手机号码一键登录服务
@@ -242,7 +242,7 @@
                     2.百度翻译 SDK
                 </p>
                 <p>
-                    收集个人信息：SDK自行采集：设备标识符（SSID、BSSID、IMEI、IDFA、AndroidID、MAC、OAID等相关信息）、设备信息、网络信息、位置信息、已安装软件列表
+                    收集个人信息：SDK自行采集：设备标识符（获取设备序列号、SSID、BSSID、IMEI、IDFA、AndroidID、MAC、OAID等相关信息）、设备信息、网络信息、位置信息、已安装软件列表
                 </p>
                 <p>
                     使用目的：语音文件进行翻译以及录音的实时翻译
@@ -423,7 +423,7 @@
                     3.阿里云-语音识别SDK
                 </p>
                 <p>
-                    收集个人信息：SDK自行采集：设备标识符（SSID、BSSID、IMEI、IDFA、AndroidID、MAC、OAID等相关信息）、设备信息、网络信息、位置信息、
+                    收集个人信息：SDK自行采集：设备标识符（获取设备序列号、SSID、BSSID、IMEI、IDFA、AndroidID、MAC、OAID等相关信息）、设备信息、网络信息、位置信息、
                 </p>
                 <p>
                     使用目的：语音翻译
